--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,122 @@
-archspec==0.2.3
+anyio==3.3.0
+appnope==0.1.2
+archspec==0.3.1
+argon2-cffi==20.1.0
+argon2-cffi-bindings==21.0.0.post3
+asttokens==2.0.5
+async-lru==1.0.2
+attrs==22.1.0
+Babel==2.9.1
+beautifulsoup4==4.10.0
+bleach==4.1.0
+blinker==1.4
+boltons==22.0.0
+Brotli==1.0.9
+certifi==2022.4.2
+cffi==1.15.0
+charset-normalizer==2.0.0
+click==8.1.1
+comm==0.0.1
+conda==4.10.3
+conda-content-trust==0.1.1a5
+conda-libmamba-solver==0.11.0
+conda-package-handling==1.7.3
+conda_package_streaming==0.2.0
+cryptography==36.0.0
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
+distro==1.6.0
+executing==0.9.9
+fastjsonschema==2.15.0
+Flask==2.0.2
+idna==3.3
+ipykernel==6.8.0
+ipython==8.0.1
+ipywidgets==7.6.5
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.1.0
+json5==0.9.7
+jsonpatch==1.32
+jsonpointer==2.1
+jsonschema==4.1.0
+jsonschema-specifications==0.4.0
+jupyter==1.0.0
+jupyter-console==7.0.2
+jupyter-events==0.6.1
+jupyter-lsp==0.10.0
+jupyter_client==7.1.0
+jupyter_core==4.9.1
+jupyter_server==1.11.1
+jupyter_server_terminals==0.11.1
+jupyterlab==3.2.5
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+jupyterlab_server==2.8.2
+libmambapy==0.7.4
+MarkupSafe==2.1.0
+matplotlib-inline==0.1.3
+menuinst==1.5.0
+mistune==0.8.4
+nbclient==0.5.8
+nbconvert==6.4.1
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.6
+notebook_shim==0.0.2
+overrides==6.1.0
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.1
+platformdirs==2.4.1
+pluggy==1.0.0
+ply==3.11
+prometheus-client==0.12.0
+prompt-toolkit==3.0.22
+psutil==5.8.1
+ptyprocess==0.7.0
+pure-eval==0.3.6
+pycosat==0.7.5
+pycparser==2.20
+Pygments==2.11.2
+PyQt5==5.15.6
+PyQt5-sip==12.9.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.19.2
+python-json-logger==2.0.2
+pytz==2021.3
+PyYAML==5.4.1
+pyzmq==22.3.0
+qtconsole==5.2.1
+QtPy==1.11.2
+referencing==0.3.0
+requests==2.26.0
+rfc3339-validator==0.1.1
+rfc3986-validator==0.1.1
+rpds-py==1.0.2
+ruamel.yaml==0.17.20
+Send2Trash==1.8.0
+setuptools==59.7.0
+sip==7.7.0
+six==1.16.0
+sniffio==1.2.0
+soupsieve==2.3.1
+stack-data==0.4.0
+terminado==0.12.1
+tinycss2==1.1.0
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.0
+truststore==0.1.3
+typing_extensions==4.1.1
+urllib3==1.26.7
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.1
+Werkzeug==2.0.2
+wheel==0.37.0
+widgetsnbextension==3.5.2
+zstandard==0.15.2
